// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly an autocomplete entity that is currently selected 1`] = `
<li>
  <a
    className="src-components-search-input-autocomplete-item__item-selected src-components-search-input-autocomplete-item__item"
    onClick={[Function]}
  >
    Some output
  </a>
</li>
`;

exports[`should render correctly an autocomplete entity that is not currently selected 1`] = `
<li>
  <a
    className="src-components-search-input-autocomplete-item__item"
    onClick={[Function]}
  >
    Some output
  </a>
</li>
`;
